--- a/MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -440,7 +440,7 @@
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Header" id="Ljz-H4-yhQ">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Header" id="Ljz-H4-yhQ" customClass="MonsterBrowserCollectionHeaderReusableView" customModule="MessagesExtension" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -496,7 +496,7 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="vc4-aG-3HJ" firstAttribute="centerX" secondItem="qHN-Ml-bZT" secondAttribute="centerX" id="0rA-z0-yKX"/>
                                                 <constraint firstItem="vc4-aG-3HJ" firstAttribute="height" secondItem="qHN-Ml-bZT" secondAttribute="height" id="3SG-Vd-DtD"/>
@@ -563,7 +563,7 @@
                                         </button>
                                         <button hidden="YES" opaque="NO" userInteractionEnabled="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgW-H7-ZDR" userLabel="All">
                                             <accessibility key="accessibilityConfiguration" hint="Show all stickers" label="All"/>
-                                            <state key="normal" image="3FCFF30C-CBB5-43EB-A7AD-914FF3A95ED4">
+                                            <state key="normal" image="462AEC2A-A1F1-4978-AB10-FB0D33D55B5A">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
@@ -620,6 +620,18 @@
                                             <exclude reference="rue-Mh-ey7"/>
                                         </mask>
                                     </variation>
+                                    <connections>
+                                        <outlet property="accessoriesButton" destination="t5i-dd-b6m" id="P8r-jC-NvR"/>
+                                        <outlet property="animatingButton" destination="d8g-Os-kA4" id="qs5-MH-7gZ"/>
+                                        <outlet property="backgroundImageView" destination="Aux-a4-6Tv" id="QUC-nS-mPE"/>
+                                        <outlet property="editButton" destination="ynB-Lb-PMU" id="cWF-63-Kks"/>
+                                        <outlet property="emojiButton" destination="3XU-sp-EL6" id="doP-N4-4ff"/>
+                                        <outlet property="largeButton" destination="ZWe-Q7-j4b" id="NVd-MG-JKi"/>
+                                        <outlet property="mediumButton" destination="vc4-aG-3HJ" id="x14-ea-HXB"/>
+                                        <outlet property="partsButton" destination="TV4-VB-cXs" id="DyJ-dL-HYU"/>
+                                        <outlet property="smallButton" destination="P6x-fw-Ira" id="mB2-dy-fJm"/>
+                                        <outlet property="textButton" destination="rdK-QF-qP9" id="J5t-h9-3T2"/>
+                                    </connections>
                                 </collectionReusableView>
                                 <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="Footer" id="Vaj-kQ-NTL" customClass="MonsterBrowserCollectionFooterReusableView" customModule="MessagesExtension" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="108" width="320" height="50"/>
@@ -669,7 +681,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="3FCFF30C-CBB5-43EB-A7AD-914FF3A95ED4" width="20" height="20">
+        <image name="462AEC2A-A1F1-4978-AB10-FB0D33D55B5A" width="20" height="20">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
